added speaker talk titles and abstracts; updated Abigail bio

--- a/index.html
+++ b/index.html
@@ -145,13 +145,24 @@
                         <ul class="mt-2 list-group list-group-flush">
                             <li class="list-group-item ps-0">
                                 <h6 class="card-text">
-                                    Talk title to be announced
+                                    From HAL to Alexa: On Robotics and Buildings
                                 </h6>
                                 <p class="card-text text-secondary">
-                                    Talk abstract to be announced
+                                    <strong>Abstract:</strong>
+                                    Voice controlled building automation systems have long captured the imagination of
+                                    Sci-Fi enthusiasts, and technophiles. With the rise of the Internet of Things (IoT)
+                                    and smart home devices, such technologies have become accessible to a wider audience
+                                    and Alexia now controls the sound and lighting systems in many US homes. To date,
+                                    such technologies have however not had a fundamental impact on how buildings are
+                                    operated, let alone saved significant amounts greenhouse gas (GHG) emissions. In
+                                    this talk, I will initially review the relationship between buildings and climate
+                                    change, describe potential technology pathways towards a carbon neutral building
+                                    stock and engage in a discussion of how robotics could play a larger role in the
+                                    process.
                                 </p>
                             </li>
                             <li class="list-group-item ps-0 text-secondary">
+                                <strong>Bio:</strong>
                                 Christoph Reinhart is a building scientist and architectural educator working in the
                                 field
                                 of sustainable building design and environmental modeling. At MIT, he is the
@@ -190,25 +201,47 @@
                         <ul class="mt-2 list-group list-group-flush">
                             <li class="list-group-item ps-0">
                                 <h6 class="card-text">
-                                    Talk title to be announced
+                                    Ocean mixed layer dynamics: from physics to climate models and back again
                                 </h6>
                                 <p class="card-text text-secondary">
-                                    Talk abstract to be announced
+                                    <strong>Abstract:</strong>
+                                    Climate simulations and future climate
+                                    change projections are notoriously sensitive
+                                    to unresolved physics involving complex
+                                    air-sea interactions. This is particularly
+                                    important in the ocean mixed layer, where
+                                    small-scale mixing and turbulence modulate
+                                    the transfer of properties - such as heat,
+                                    momentum, and carbon - between the
+                                    atmosphere and ocean interior. These
+                                    processes are on scales much smaller than
+                                    the grid used in climate models, even at the
+                                    highest possible resolution. In this talk, I
+                                    will present my work towards a comprehensive
+                                    understanding of multi-scale turbulent
+                                    interactions in the ocean mixed layer. I
+                                    will discuss insights learned from a
+                                    combination of theory, numerical
+                                    simulations, observations, and data-driven
+                                    methods, in an attempt to isolate individual
+                                    processes and improve their unresolved
+                                    physical effects in climate models.
                                 </p>
                             </li>
                             <li class="list-group-item text-secondary ps-0">
-                                Abigail Bodner is an Assistant Professor at the Massachusetts Institute of Technology,
-                                where
-                                she holds a
-                                shared position between the Departments of Earth, Atmospheric, and Planetary Sciences
-                                (EAPS), and Electrical Engineering and Computer Science (EECS). Her research interests
-                                span
-                                climate, physical oceanography, geophysical fluid dynamics, and turbulence. She
-                                investigates
-                                turbulence in the upper ocean from O(100 km) to O(1 m) using a combination of theory,
-                                high-resolution numerical simulations, climate models, and machine learning. She also
-                                has a
-                                growing interest in coastal sea level drivers.
+                                <strong>Bio:</strong>
+                                Dr. Abigail Bodner has joined the Department of Earth, Atmospheric and Planetary
+                                Sciences (EAPS) and the Schwarzman College of Computing (SCC) in January 2024.
+                                Previously, she was a Simons Society Junior Fellow working at the Courant Institute of
+                                Mathematical Sciences in New York University. Bodner completed her PhD from the
+                                Department of Earth, Environmental, and Planetary Sciences at Brown University. She
+                                holds Master’s degrees in Applied Mathematics from Brown University and in Atmospheric
+                                Sciences from Tel Aviv University. Bodner’s research spans climate, physical
+                                oceanography, geophysical fluid dynamics, and turbulence. She investigates multi-scale
+                                turbulent interactions in the upper ocean using a combination of theory, numerical
+                                models, and data driven methods. Dr. Bodner is the creator and co-founder of
+                                Climatematch Academy, an international volunteer-driven organization teaching
+                                computational tools for climate science.
                             </li>
                         </ul>
                     </div>
