include youtube playlist

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         members from the robotics, climate, and sustainability communities for a day of
                         presentations, panels, and discussions about how robotics research can support climate change
                         science, mitigation, and adaptation efforts. </p>
-                    <a class="btn btn-primary btn-lg" href="https://forms.gle/gMdvMLBp4eXUzvUSA">Register Here!</a>
+                    <a class="btn btn-primary btn-lg" href="https://www.youtube.com/watch?v=ewHdCf9wkrA&list=PLVff7FwYUBVlpYrYfrvFEMxMYsSwF3k39">Watch Recordings Here!</a>
                 </div>
             </div>
         </div>
